kubernetes/apps/observability/victoria-logs/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    gatus.home-operations.com/endpoint: |-
      group: observability
      path: /health
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - logs.${SECRET_DOMAIN} # yayamlls-disable-line
  rules:
    - backendRefs:
        - name: victoria-logs-victoria-logs-single-server
          port: 9428
